--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
 
-<canvas id="confetti"></canvas>
-
 <section class="screen screen1">
   <h1>🎉 Happy Birthday Mom 🎉</h1>
   <p>Dear Mom, you are my world, my strength, and my biggest blessing. ❤️</p>
@@ -22,4 +20,18 @@
     <div><span id="days">0</span><p>Days</p></div>
     <div><span id="hours">0</span><p>Hours</p></div>
     <div><span id="minutes">0</span><p>Minutes</p></div>
-    <div><span id=
+    <div><span id="seconds">0</span><p>Seconds</p></div>
+  </div>
+
+  <h3>🌸 A Message For You 🌸</h3>
+  <p>
+    Mom, every day with you is a blessing. Your love, care, and sacrifices
+    shape my life in ways I can never fully express. I love you forever ❤️
+  </p>
+</section>
+
+<!-- THIS LINE IS REQUIRED -->
+<script src="script.js"></script>
+
+</body>
+</html>
